dotnet/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: productscanner
  labels:
    app.kubernetes.io/name: productscanner
